Add all my files

--- a/templates/home.html
+++ b/templates/home.html
@@ -158,7 +158,7 @@
 أكثر محلات الموبايلات تفاعلا على الموقع                              </div>
                                   <div id ="TopSharedMobile1"class=" Shop ">
                                           <div class="hovereffect">
-                                            <img  class="img-responsive" src="https://drive.google.com/uc?id={{ phoneshop1.shop_image }}" style="width:630px;height:250px;">
+                                            <img  class="img-responsive" src="https://drive.google.com/uc?id={{ phoneshop1.shop_image }}" style="width:200px;height:250px;">
                                               <div class="overlay">
                                                  <h2>
                                                    <span> <a href="{% url 'clothes' pk=clothesshop1.pk %}">{{ phoneshop1.shop_name}}</a> </span>
@@ -169,7 +169,7 @@
 
                                   <div id ="TopSharedMobile2" class=" Shop ">
                                                   <div class="hovereffect">
-                                                    <img  class="img-responsive" src="https://drive.google.com/uc?id={{ phoneshop2.shop_image }}" style="width:630px;height:250px;">
+                                                    <img  class="img-responsive" src="https://drive.google.com/uc?id={{ phoneshop2.shop_image }}" style="width:200px;height:250px;">
                                                       <div class="overlay">
                                                          <h2>
                                                            <span> <a href="{% url 'clothes' pk=clothesshop1.pk %}">{{ phoneshop2.shop_name}}</a> </span>
@@ -180,7 +180,7 @@
 
                                   <div id ="TopSharedMobile3" class=" Shop ">
                                                   <div class="hovereffect">
-                                                    <img  class="img-responsive" src="https://drive.google.com/uc?id={{ phoneshop3.shop_image }}" style="width:630px;height:250px;">
+                                                    <img  class="img-responsive" src="https://drive.google.com/uc?id={{ phoneshop3.shop_image }}" style="width:200px;height:250px;">
                                                               <div class="overlay">
                                                                  <h2>
                                                                    <span> <a href="{% url 'clothes' pk=clothesshop1.pk %}">{{ phoneshop3.shop_name}}</a> </span>
@@ -194,13 +194,13 @@
                           {% for obj in object_list2 %}
 
                                 <div>
-                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto1_id }}"></a>
+                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto1_id }}" style="width:465px;height:327px;"></a>
                                 </div>
                                 <div>
-                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto2_id }}"></a>
+                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto2_id }}" style="width:465px;height:327px;"></a>
                                  </div>
                                  <div>
-                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto3_id }}"></a>
+                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto3_id }}" style="width:465px;height:327px;"></a>
                                 </div>
                                 {% endfor %}
 
@@ -216,7 +216,7 @@
                                  </div>
                                  <div id ="TopSharedClothes1"class=" Shop ">
                                                 <div class="hovereffect">
-                                                  <img  class="img-responsive" src="https://drive.google.com/uc?id={{ clothesshop1.shop_image }}" style="width:630px;height:250px;">
+                                                  <img  class="img-responsive" src="https://drive.google.com/uc?id={{ clothesshop1.shop_image }}" style="width:200px;height:250px;">
                                                     <div class="overlay">
                                                        <h2>
                                                          <span> <a href="{% url 'clothes' pk=clothesshop1.pk %}">{{ clothesshop1.shop_name}}</a> </span>
@@ -226,7 +226,7 @@
                                  </div>
                                  <div id ="TopSharedClothes2"class=" Shop ">
                                                 <div class="hovereffect">
-                                                  <img  class="img-responsive" src="https://drive.google.com/uc?id={{ clothesshop2.shop_image }}" style="width:630px;height:250px;">
+                                                  <img  class="img-responsive" src="https://drive.google.com/uc?id={{ clothesshop2.shop_image }}" style="width:200px;height:250px;">
                                                     <div class="overlay">
                                                        <h2>
                                                          <span> <a href="{% url 'clothes' pk=clothesshop2.pk %}">{{ clothesshop2.shop_name}}</a> </span>
@@ -236,7 +236,7 @@
                                  </div>
                                  <div id ="TopSharedClothes3"class=" Shop ">
                                                 <div class="hovereffect">
-                                                  <img  class="img-responsive" src="https://drive.google.com/uc?id={{ clothesshop3.shop_image }}" style="width:630px;height:250px;">
+                                                  <img  class="img-responsive" src="https://drive.google.com/uc?id={{ clothesshop3.shop_image }}" style="width:200px;height:250px;">
                                                     <div class="overlay">
                                                        <h2>
                                                          <span> <a href="{% url 'clothes' pk=clothesshop3.pk %}">{{ clothesshop3.shop_name}}</a> </span>
@@ -250,13 +250,13 @@
                           {% for obj in object_list2 %}
 
                                 <div>
-                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo1_id }}"></a>
+                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo1_id }}" style="width:465px;height:327px;"></a>
                                 </div>
                                 <div>
-                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo2_id }}"></a>
+                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo2_id }}" style="width:465px;height:327px;"></a>
                                 </div>
                                 <div>
-                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo3_id }}"></a>
+                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo3_id }}" style="width:465px;height:327px;"></a>
                                 </div>
                                 {% endfor %}
 
