--- a/static/css/main.css
+++ b/static/css/main.css
@@ -339,7 +339,7 @@ body{
     padding: 10px 0px;
     direction: rtl;
     text-align: right;
-    background: #C8A7C3;
+    background: #f6ac71;
  }
 
 .description >  .head > span{
@@ -691,4 +691,178 @@ color: white;
     margin: 1px;
     text-align: right;
 
+}
+
+/* ----------------------------------------- DisplayMobilesShop ----------------------------------------------  */
+
+
+
+@media screen and (max-width: 900px) {
+  .header > .container > .Site_logo > h1 > a {
+    font-size: 43px;
+    font-weight: 600;
+  }
+
+  .banner {
+    background-image: url(../images/b1.jpg);
+    min-height: 400px;
+    width: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .header > .container > .Site_logo > h1 > a {
+    font-size: 23px;
+    font-weight: 600;
+  }
+
+  .carousel-item {
+    padding: 7px 10px;
+    font-size: 17px;
+  }
+
+  .banner {
+    background-image: url(../images/b1.jpg);
+    min-height: 201px;
+    width: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  .second > .container > .row > .TopClothes > .head,
+  .TopMobile > .head {
+    background: #4e6997;
+    font-size: 18px;
+    color: bisque;
+  }
+
+  .Shop {
+    padding: 3px;
+    font-size: 25px;
+    width: 98%;
+    height: 50px;
+    display: block;
+    margin: 15px 3px;
+    border-radius: 5px;
+  }
+
+  .Shop > .hovereffect {
+    width: 100%;
+    height: 100%;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: default;
+  }
+
+  .Shop > .hovereffect .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    background-color: rgba(75, 75, 75, 0.7);
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .Shop > .hovereffect:hover .overlay {
+    background-color: rgba(48, 152, 157, 0.4);
+  }
+
+  .hovereffect img {
+    display: block;
+    position: relative;
+  }
+
+  .Shop > .hovereffect h2 {
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 12px;
+    background: rgba(0, 0, 0, 0.6);
+    -webkit-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .Shop > .hovereffect:hover h2 {
+    -webkit-transform: translateY(1px);
+    -ms-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+
+  .Shop > .hovereffect a.info {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    border: 1px solid #fff;
+    background-color: transparent;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    font-weight: normal;
+    margin: -45px 0 0 0;
+    padding: 100px 0px;
+    width: 98%;
+    font-size: 17px;
+  }
+
+  .Shop > .hovereffect:hover a.info {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+
+  .Shop > .hovereffect a.info:hover {
+    box-shadow: 0 0 5px #fff;
+  }
+
+  .description > .head > span {
+    font-weight: bold;
+    font-size: 20px;
+    border-bottom: double 7px white;
+  }
+
+  .description > .SiteD {
+    font-size: 18px;
+    color: black;
+    margin-top: 15px;
+  }
+
+  .contact > .head > span {
+    font-weight: bold;
+    font-size: 18px;
+    border-bottom: double 7px white;
+  }
+
+  .contact > .Social {
+    font-size: 15px;
+    color: white;
+    margin-top: 15px;
+  }
+
+  .Copyrigths {
+    text-align: center;
+    font-size: 13px;
+    vertical-align: centre;
+    padding: 25px 0px;
+    max-height: 100px;
+    font-weight: bold;
+  }
 }
