--- a/templates/home.html
+++ b/templates/home.html
@@ -194,13 +194,13 @@
                           {% for obj in object_list2 %}
 
                                 <div>
-                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto1 }}" style="width:465px;height:327px;"></a>
+                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto1 }}" ></a>
                                 </div>
                                 <div>
-                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto2 }}" style="width:465px;height:327px;"></a>
+                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto2 }}" ></a>
                                  </div>
                                  <div>
-                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto3 }}" style="width:465px;height:327px;"></a>
+                                        <a><img src="https://drive.google.com/uc?id={{ obj.homephoto3 }}" ></a>
                                 </div>
                                 {% endfor %}
 
@@ -250,13 +250,13 @@
                           {% for obj in object_list2 %}
 
                                 <div>
-                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo1 }}" style="width:465px;height:327px;"></a>
+                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo1 }}" ></a>
                                 </div>
                                 <div>
-                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo2 }}" style="width:465px;height:327px;"></a>
+                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo2 }}" ></a>
                                 </div>
                                 <div>
-                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo3 }}" style="width:465px;height:327px;"></a>
+                                      <a><img src="https://drive.google.com/uc?id={{ obj.home2photo3 }}" ></a>
                                 </div>
                                 {% endfor %}
 
