Add all my files

--- a/templates/MobileShop.html
+++ b/templates/MobileShop.html
@@ -163,13 +163,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}" >
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo2 }}" style="width:290px;height:307px;">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo2 }}" >
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo3 }}" style="width:290px;height:307px;">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo3 }}" >
                                               </div>
                                               {% endfor %}
 
@@ -180,13 +180,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}" style="width:290px;height:307px;">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}" >
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo2 }}" style="width:290px;height:307px;">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo2 }}" >
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo3 }}" style="width:290px;height:307px;">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo3 }}" >
                                               </div>
                                               {% endfor %}
 
@@ -197,13 +197,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo1 }}" style="width:290px;height:307px;">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo1 }}" >
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo2 }}" style="width:290px;height:307px;">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo2 }}" >
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo3 }}" style="width:290px;height:307px;">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo3 }}" >
                                               </div>
                                               {% endfor %}
 
@@ -214,13 +214,13 @@
                                                   {% for obj in object_list3%}
 
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo1 }}" style="width:290px;height:307px;">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo1 }}" >
                                                   </div>
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo2 }}" style="width:290px;height:307px;">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo2 }}" >
                                                   </div>
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo3 }}" style="width:290px;height:307px;">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo3 }}" >
                                                   </div>
                                                   {% endfor %}
 
