--- a/templates/clothes.html
+++ b/templates/clothes.html
@@ -191,7 +191,7 @@
 <div class="col-sm  asideAD">
         <div>
           {%for obj in object_list%}
-             <img src="https://drive.google.com/uc?id={{ obj.cloth5photo }}" style="width:232px;height:450px;">
+             <img src="https://drive.google.com/uc?id={{ obj.cloth5photo }}" >
           {%endfor%}
         </div>
 
