--- a/templates/mobiles.html
+++ b/templates/mobiles.html
@@ -188,7 +188,7 @@
 <div class="col-sm  asideAD">
         <div>
           {%for obj in object_list%}
-            <img src="https://drive.google.com/uc?id={{ obj.phone5photo }}" style="width:232px;height:450px;">
+            <img src="https://drive.google.com/uc?id={{ obj.phone5photo }}" >
           {%endfor%}
         </div>
 
