--- a/templates/ClothesShop.html
+++ b/templates/ClothesShop.html
@@ -160,13 +160,13 @@
                                             <div id="ClothesShop-AD1" class="SP-ADS col-sm">
                                               {% for obj in object_list3%}
                                                 <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.cloth1photo1 }}" style="width:290px;height:307px;">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.cloth1photo1 }}" >
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth1photo2 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth1photo2 }}" >
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth1photo3 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth1photo3 }}" >
                                                 </div>
                                               {% endfor %}
 
@@ -177,13 +177,13 @@
                                               {% for obj in object_list3%}
 
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo1 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo1 }}" >
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo2 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo2 }}" >
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo3 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo3 }}" >
                                                 </div>
                                               {% endfor %}
 
@@ -194,13 +194,13 @@
                                               {% for obj in object_list3%}
 
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo1 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo1 }}" >
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo2 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo2 }}" >
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo3 }}" style="width:290px;height:307px;">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo3 }}" >
                                                 </div>
                                                 {% endfor %}
 
@@ -211,13 +211,13 @@
                                                   {% for obj in object_list3%}
 
                                                     <div>
-                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo1 }}" style="width:290px;height:307px;">
+                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo1 }}" >
                                                     </div>
                                                     <div>
-                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo2 }}" style="width:290px;height:307px;">
+                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo2 }}" >
                                                     </div>
                                                     <div>
-                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo3 }}" style="width:290px;height:307px;">
+                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo3 }}" >
                                                     </div>
                                                     {% endfor %}
 
